--- a/BCX_Wallet/module_login/src/main/res/layout/activity_password_login.xml
+++ b/BCX_Wallet/module_login/src/main/res/layout/activity_password_login.xml
@@ -88,7 +88,7 @@
         </com.cocos.library_base.widget.LinearLinearLayout>
 
 
-        <com.cocos.library_base.widget.LinearLinearLayout
+        <com.cocos.library_base.widget.LinearRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_20"
@@ -104,14 +104,29 @@
                 android:id="@+id/et_confirm_password"
                 style="@style/editText_style"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:hint="@string/module_login_password_hint_login"
                 android:inputType="textPassword"
                 android:paddingTop="8dp"
                 android:paddingBottom="@dimen/dp_16"
                 android:text="@={viewModel.password}"
                 android:textSize="@dimen/sp_15" />
-        </com.cocos.library_base.widget.LinearLinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
+
+                <ImageView
+                    android:id="@+id/iv_pwd_visible"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/hidden_pwd" />
+            </LinearLayout>
+        </com.cocos.library_base.widget.LinearRelativeLayout>
 
         <Button
             android:layout_width="match_parent"
