--- a/BCX_Wallet/library_base/src/main/res/layout/password_verify_dialog_layout.xml
+++ b/BCX_Wallet/library_base/src/main/res/layout/password_verify_dialog_layout.xml
@@ -19,13 +19,14 @@
             android:textColor="@color/color_262A33"
             android:textSize="17sp" />
 
-        <com.cocos.library_base.widget.LinearLinearLayout
+        <com.cocos.library_base.widget.LinearRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_20"
             android:layout_marginTop="@dimen/dp_20"
             android:layout_marginRight="@dimen/dp_20"
-            android:orientation="vertical"
+            android:orientation="horizontal"
+            br:needLeftAndRigtBorder="true"
             br:borderColor="@color/color_ffd8dbe1"
             br:borderStrokeWidth="6">
 
@@ -33,7 +34,7 @@
                 android:id="@+id/edt_password"
                 style="@style/editText_style"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:hint="@string/verify_password_hint"
                 android:inputType="textPassword"
                 android:paddingStart="@dimen/dp_12"
@@ -42,7 +43,22 @@
                 android:singleLine="true"
                 android:textSize="@dimen/sp_15" />
 
-        </com.cocos.library_base.widget.LinearLinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
+
+                <ImageView
+                    android:id="@+id/iv_pwd_visible"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20"
+                    android:src="@drawable/hidden_pwd" />
+            </LinearLayout>
+
+        </com.cocos.library_base.widget.LinearRelativeLayout>
 
         <View
             android:layout_width="match_parent"
