--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
@@ -112,19 +112,38 @@
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
 
-            <EditText
-                android:id="@+id/et_confirm_password"
-                style="@style/editText_style"
+            <RelativeLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.75"
-                android:hint="@string/module_login_password_hint"
-                android:inputType="textPassword"
-                android:maxLength="12"
-                android:paddingTop="@dimen/dp_22"
-                android:paddingBottom="@dimen/dp_22"
-                android:text="@={viewModel.newPassword}" />
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75">
 
+                <EditText
+                    android:id="@+id/et_modify_password"
+                    style="@style/editText_style"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/module_login_password_hint"
+                    android:inputType="textPassword"
+                    android:maxLength="12"
+                    android:paddingTop="@dimen/dp_22"
+                    android:paddingBottom="@dimen/dp_22"
+                    android:text="@={viewModel.newPassword}" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:paddingLeft="@dimen/dp_12"
+                    android:paddingRight="@dimen/dp_12">
+
+                    <ImageView
+                        android:id="@+id/iv_pwd_visible"
+                        android:layout_width="@dimen/dp_20"
+                        android:layout_height="@dimen/dp_20"
+                        android:src="@drawable/hidden_pwd" />
+                </LinearLayout>
+            </RelativeLayout>
         </com.cocos.library_base.widget.LinearLinearLayout>
 
 
@@ -152,7 +171,7 @@
                 android:textSize="@dimen/sp_15" />
 
             <EditText
-                android:id="@+id/et_information_tips"
+                android:id="@+id/et_modify_confirm"
                 style="@style/editText_style"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
