fix (ResetPwdActivity)  reset pwd add pwd visible control icon

--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_modify_password.xml
@@ -112,28 +112,31 @@
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.75">
+                android:layout_weight="0.75"
+                android:weightSum="10">
 
                 <EditText
                     android:id="@+id/et_modify_password"
                     style="@style/editText_style"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="8"
                     android:hint="@string/module_login_password_hint"
                     android:inputType="textPassword"
                     android:maxLength="12"
                     android:paddingTop="@dimen/dp_22"
                     android:paddingBottom="@dimen/dp_22"
+                    android:singleLine="true"
                     android:text="@={viewModel.newPassword}" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:gravity="right|center_vertical"
                     android:paddingLeft="@dimen/dp_12"
                     android:paddingRight="@dimen/dp_12">
 
@@ -143,7 +146,10 @@
                         android:layout_height="@dimen/dp_20"
                         android:src="@drawable/hidden_pwd" />
                 </LinearLayout>
-            </RelativeLayout>
+
+            </LinearLayout>
+
+
         </com.cocos.library_base.widget.LinearLinearLayout>
 
 
