--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_reset_password.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_reset_password.xml
@@ -107,18 +107,45 @@
                 android:textColor="@color/color_262A33"
                 android:textSize="@dimen/sp_15" />
 
-            <EditText
-                style="@style/editText_style"
+            <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:hint="@string/module_mine_input_new_password"
-                android:inputType="textPassword"
-                android:maxLength="63"
-                android:paddingLeft="@dimen/dp_14"
-                android:paddingTop="@dimen/dp_22"
-                android:paddingBottom="@dimen/dp_22"
-                android:text="@={viewModel.newPassword}" />
+                android:layout_height="wrap_content"
+                android:layout_weight="0.75"
+                android:weightSum="10"
+                android:paddingLeft="@dimen/dp_14">
+
+                <EditText
+                    android:id="@+id/et_reset_password"
+                    style="@style/editText_style"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    android:hint="@string/module_mine_input_new_password"
+                    android:inputType="textPassword"
+                    android:maxLength="12"
+                    android:paddingTop="@dimen/dp_22"
+                    android:paddingBottom="@dimen/dp_22"
+                    android:singleLine="true"
+                    android:text="@={viewModel.newPassword}" />
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:gravity="right|center_vertical"
+                    android:paddingLeft="@dimen/dp_12"
+                    android:paddingRight="@dimen/dp_12">
+
+                    <ImageView
+                        android:id="@+id/iv_pwd_visible"
+                        android:layout_width="@dimen/dp_20"
+                        android:layout_height="@dimen/dp_20"
+                        android:src="@drawable/hidden_pwd" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+
 
         </com.cocos.library_base.widget.LinearLinearLayout>
 
@@ -144,6 +171,7 @@
                 android:textSize="@dimen/sp_15" />
 
             <EditText
+                android:id="@+id/et_reset_confirm_password"
                 style="@style/editText_style"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
