--- a/BCX_Wallet/module_login/src/main/res/layout/activity_register.xml
+++ b/BCX_Wallet/module_login/src/main/res/layout/activity_register.xml
@@ -116,26 +116,40 @@
                 android:textSize="@dimen/sp_12"
                 android:visibility="@{viewModel.accountNameErrorTipVisible}" />
 
-            <com.cocos.library_base.widget.LinearRelativeLayout
+            <com.cocos.library_base.widget.LinearLinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_20"
                 android:layout_marginTop="@dimen/dp_12"
                 android:layout_marginRight="@dimen/dp_20"
-                android:orientation="vertical"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:weightSum="10"
                 br:borderColor="@color/color_ffd8dbe1"
                 br:borderStrokeWidth="6"
                 br:needLeftAndRigtBorder="false"
                 br:needTopBorder="false">
 
+                <EditText
+                    android:id="@+id/edt_register_pwd"
+                    style="@style/editText_style"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    android:hint="@string/module_login_password_hint"
+                    android:inputType="textPassword"
+                    android:paddingTop="@dimen/dp_8"
+                    android:paddingBottom="@dimen/dp_16"
+                    android:text="@={viewModel.password}"
+                    android:textSize="@dimen/sp_15" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
+                    android:layout_width="0dp"
+                    android:layout_weight="2"
+                    android:layout_height="match_parent"
                     android:paddingLeft="@dimen/dp_12"
-                    android:paddingRight="@dimen/dp_12">
+                    android:paddingRight="@dimen/dp_12"
+                    android:gravity="right|center_vertical">
 
                     <ImageView
                         android:id="@+id/iv_pwd_visible"
@@ -144,18 +158,7 @@
                         android:src="@drawable/hidden_pwd" />
                 </LinearLayout>
 
-                <EditText
-                    android:id="@+id/edt_register_pwd"
-                    style="@style/editText_style"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:hint="@string/module_login_password_hint"
-                    android:inputType="textPassword"
-                    android:paddingTop="@dimen/dp_8"
-                    android:paddingBottom="@dimen/dp_16"
-                    android:text="@={viewModel.password}"
-                    android:textSize="@dimen/sp_15" />
-            </com.cocos.library_base.widget.LinearRelativeLayout>
+            </com.cocos.library_base.widget.LinearLinearLayout>
 
 
             <com.cocos.library_base.widget.LinearLinearLayout
