--- a/BCX_Wallet/library_res/src/main/res/values/colors.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="color_ff007aff">#ff007aff</color>
     <color name="color_F3F4F6">#F3F4F6</color>
     <color name="color_E8EBF1">#E8EBF1</color>
+    <color name="color_EFF0F1">#EFF0F1</color>
+    <color name="color_606162">#606162</color>
 </resources>
