--- a/BCX_Wallet/library_res/src/main/res/values/dimens.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/dimens.xml
@@ -38,4 +38,5 @@
     <dimen name="dp_11">11dp</dimen>
     <dimen name="dp_44">44dp</dimen>
     <dimen name="dp_27">27dp</dimen>
+    <dimen name="dp_36">36dp</dimen>
 </resources>
