--- a/BCX_Wallet/library_base/src/main/res/layout/activity_invoke_contract.xml
+++ b/BCX_Wallet/library_base/src/main/res/layout/activity_invoke_contract.xml
@@ -23,62 +23,61 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/color_F7F7F7"
-                android:orientation="vertical"
-                android:paddingStart="@dimen/dp_20"
-                android:paddingEnd="@dimen/dp_20"
-                android:paddingBottom="@dimen/dp_18">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <TextView
-                        android:id="@+id/invoke_login_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:padding="16dp"
-                        android:text="@string/invoke_contract_title"
-                        android:textColor="@color/color_333333"
-                        android:textSize="@dimen/sp_16"
-                        android:typeface="@{@string/TOTAL_ASSET}" />
-
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="@dimen/dp_60"
-                    android:layout_height="@dimen/dp_60"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/dp_26"
-                    android:src="@drawable/logo"
-                    binding:url="@{viewModel.invokeContractDappIconUrl}" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/dp_8"
-                    android:text="@={viewModel.invokeContractDappName}"
-                    android:textColor="@color/color_333333"
-                    android:textSize="@dimen/sp_14" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:paddingTop="@dimen/dp_22">
+                android:orientation="vertical">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/color_F7F7F7"
+                    android:orientation="vertical"
+                    android:paddingStart="@dimen/dp_20"
+                    android:paddingEnd="@dimen/dp_20"
+                    android:paddingBottom="@dimen/dp_18">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/invoke_login_title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:padding="16dp"
+                            android:text="@string/invoke_contract_title"
+                            android:textColor="@color/color_333333"
+                            android:textSize="@dimen/sp_16"
+                            android:typeface="@{@string/TOTAL_ASSET}" />
+
+                    </RelativeLayout>
+
+                    <ImageView
+                        android:layout_width="@dimen/dp_60"
+                        android:layout_height="@dimen/dp_60"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/dp_26"
+                        android:src="@drawable/logo"
+                        binding:url="@{viewModel.invokeContractDappIconUrl}" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/dp_8"
+                        android:text="@={viewModel.invokeContractDappName}"
+                        android:textColor="@color/color_333333"
+                        android:textSize="@dimen/sp_14" />
+
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_20"
                     android:layout_marginEnd="@dimen/dp_20"
+                    android:paddingTop="@dimen/dp_60"
                     android:text="@string/invoked_login_account"
                     android:textColor="@color/color_9B9B9B"
                     android:textSize="@dimen/sp_14" />
