fix (layout) set textsize unit to dp

--- a/BCX_Wallet/library_base/src/main/res/layout/customactivityoncrash_default_error_activity.xml
+++ b/BCX_Wallet/library_base/src/main/res/layout/customactivityoncrash_default_error_activity.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="@dimen/customactivityoncrash_activity_vertical_margin"
         android:gravity="center"
         android:text="@string/customactivityoncrash_error_activity_error_occurred_explanation"
-        android:textSize="18sp"
+        android:textSize="@dimen/sp_18"
         android:textStyle="bold" />
 
     <Button
