--- a/BCX_Wallet/module_login/src/main/res/layout/activity_password_login.xml
+++ b/BCX_Wallet/module_login/src/main/res/layout/activity_password_login.xml
@@ -31,7 +31,7 @@
                 android:paddingRight="@dimen/dp_20"
                 android:text="@string/module_login_register_title"
                 android:textColor="@color/color_262A33"
-                android:textSize="16sp"
+                android:textSize="@dimen/dp_16"
                 binding:onClickCommand="@{viewModel.registerClickCommand}" />
 
         </LinearLayout>
