--- a/BCX_Wallet/library_base/src/main/res/layout/js_web_password_verify_dialog_layout.xml
+++ b/BCX_Wallet/library_base/src/main/res/layout/js_web_password_verify_dialog_layout.xml
@@ -18,7 +18,7 @@
             android:paddingTop="@dimen/dp_10"
             android:text="@string/title_verify_password_text"
             android:textColor="@color/color_262A33"
-            android:textSize="17sp" />
+            android:textSize="@dimen/sp_16" />
 
         <com.cocos.library_base.widget.LinearRelativeLayout
             android:layout_width="match_parent"
@@ -105,7 +105,7 @@
                 android:text="@string/cancel_text"
                 android:textAllCaps="false"
                 android:textColor="@color/color_4868DC"
-                android:textSize="17sp" />
+                android:textSize="@dimen/sp_16" />
 
             <View
                 android:layout_width="@dimen/dp_1"
@@ -122,7 +122,7 @@
                 android:text="@string/confirm_text"
                 android:textAllCaps="false"
                 android:textColor="@color/color_F56151"
-                android:textSize="17sp" />
+                android:textSize="@dimen/sp_16" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
