--- a/BCX_Wallet/library_base/src/main/res/layout/password_verify_dialog_layout.xml
+++ b/BCX_Wallet/library_base/src/main/res/layout/password_verify_dialog_layout.xml
@@ -17,7 +17,7 @@
             android:paddingTop="@dimen/dp_10"
             android:text="@string/title_verify_password_text"
             android:textColor="@color/color_262A33"
-            android:textSize="17sp" />
+            android:textSize="@dimen/sp_16" />
 
         <com.cocos.library_base.widget.LinearRelativeLayout
             android:layout_width="match_parent"
@@ -80,7 +80,7 @@
                 android:text="@string/cancel_text"
                 android:textAllCaps="false"
                 android:textColor="@color/color_4868DC"
-                android:textSize="17sp" />
+                android:textSize="@dimen/sp_16" />
 
             <View
                 android:layout_width="@dimen/dp_1"
@@ -97,7 +97,7 @@
                 android:text="@string/confirm_text"
                 android:textAllCaps="false"
                 android:textColor="@color/color_F56151"
-                android:textSize="17sp" />
+                android:textSize="@dimen/sp_16" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
