--- a/BCX_Wallet/library_base/src/main/res/layout/spiner_item_layout.xml
+++ b/BCX_Wallet/library_base/src/main/res/layout/spiner_item_layout.xml
@@ -11,6 +11,6 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="@color/selector_node_selected"
-        android:textSize="15sp" />
+        android:textSize="@dimen/sp_15" />
 
 </LinearLayout>
