--- a/BCX_Wallet/library_res/src/main/res/values/dimens.xml
+++ b/BCX_Wallet/library_res/src/main/res/values/dimens.xml
@@ -3,9 +3,9 @@
     <dimen name="dp_70">70dp</dimen>
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_16">16dp</dimen>
-    <dimen name="sp_16">16sp</dimen>
+    <dimen name="sp_16">16dp</dimen>
     <dimen name="dp_18">18dp</dimen>
-    <dimen name="sp_14">14sp</dimen>
+    <dimen name="sp_14">14dp</dimen>
     <dimen name="dp_15">15dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_5">5dp</dimen>
@@ -22,19 +22,19 @@
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_32">32dp</dimen>
     <dimen name="dp_50">50dp</dimen>
-    <dimen name="sp_22">22sp</dimen>
-    <dimen name="sp_18">18sp</dimen>
+    <dimen name="sp_22">22dp</dimen>
+    <dimen name="sp_18">18dp</dimen>
     <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_66">66dp</dimen>
-    <dimen name="sp_15">15sp</dimen>
+    <dimen name="sp_15">15dp</dimen>
     <dimen name="dp_22">22dp</dimen>
     <dimen name="dp_13">13dp</dimen>
     <dimen name="dp_60">60dp</dimen>
     <dimen name="sp_20">20dp</dimen>
     <dimen name="dp_14">14dp</dimen>
-    <dimen name="sp_13">13sp</dimen>
+    <dimen name="sp_13">13dp</dimen>
     <dimen name="dp_11">11dp</dimen>
     <dimen name="dp_44">44dp</dimen>
     <dimen name="dp_27">27dp</dimen>
