--- a/BCX_Wallet/module_asset/src/main/res/layout/activity_receivables.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/activity_receivables.xml
@@ -146,7 +146,7 @@
                     android:singleLine="true"
                     android:text="@={viewModel.receivableAccountName}"
                     android:textColor="@color/color_626670"
-                    android:textSize="15sp" />
+                    android:textSize="@dimen/sp_15" />
 
                 <Button
                     android:layout_width="wrap_content"
