--- a/BCX_Wallet/module_found/src/main/res/values/dimens.xml
+++ b/BCX_Wallet/module_found/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ResourceName">
     <dimen name="dp_140">140dp</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_3">3dp</dimen>
